--- a/src/app/modals/menu/menu/menu.component.html
+++ b/src/app/modals/menu/menu/menu.component.html
@@ -5,10 +5,10 @@
         <ion-label>&nbsp; Reorder lists</ion-label>
     </ion-item>
     <ion-item button [routerLink]="['/bin']" detail="false" (click)="dismissPopover()">
-        <ion-icon name="trash-outline" style="color: #ed576b"></ion-icon>
+        <ion-icon name="trash-outline" color="danger"></ion-icon>
         <ion-label>&nbsp; Trash</ion-label>
     </ion-item>
-    <ion-item button detail="false" (click)="logOut()" (click)="dismissPopover()">
+    <ion-item button detail="false" (click)="logOut()">
         <ion-icon name="log-out-outline"></ion-icon>
         <ion-label>&nbsp; Log out</ion-label>
     </ion-item>
