--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,7 +18,7 @@
 <ion-content>
     <ion-searchbar [(ngModel)]="searchInput" [disabled]="!isDisabled"></ion-searchbar>
 
-    <ion-list>
+    <ion-list #listsHtmlElement>
         <ion-reorder-group *ngIf="lists$ | async as lists" (ionItemReorder)="onRenderItems($event)"
             [disabled]="isDisabled">
 
@@ -33,13 +33,16 @@
                         <ion-icon *ngIf="isSharedByMe(list)" name="share-social-outline" style="color: gray"></ion-icon>
                     </ion-item>
                 </ion-reorder>
-                
+
                 <ion-item-options side="start">
                     <ion-item-option (click)="presentShareModal(list)" color="primary">
                         <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
                     </ion-item-option>
                 </ion-item-options>
                 <ion-item-options side="end">
+                    <ion-item-option (click)="rename(list, listsHtmlElement)" color="secondary">
+                        <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
+                    </ion-item-option>
                     <ion-item-option (click)="moveToBin(list)" color="danger">
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                     </ion-item-option>
