--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -28,7 +28,7 @@
                         <ion-label>
                             <h2>{{list?.name}}</h2>
                         </ion-label>
-                        <ion-reorder slot="start"></ion-reorder>
+                        <ion-icon *ngIf="!isDisabled" slot="start" name="repeat-outline"></ion-icon>
                         <ion-icon *ngIf="isSharedWithMe(list)" name="people-outline" style="color: gray"></ion-icon>
                         <ion-icon *ngIf="isSharedByMe(list)" name="share-social-outline" style="color: gray"></ion-icon>
                     </ion-item>
