--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -17,7 +17,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-list *ngIf="list$ | async as list">
+    <ion-list *ngIf="list$ | async as list" #todosHtmlElement>
         <ion-item-sliding *ngFor="let todo of list?.todos">
             <ion-item color="{{todo?.isDone ? 'light' : ''}}">
                 <ion-label color="{{todo?.isDone ? 'medium' : ''}}">
@@ -31,6 +31,11 @@
             </ion-item>
 
             <ion-item-options side="end" *ngIf="canWrite()">
+                <ion-item-option (click)="modifyTodo(todo, list, todosHtmlElement)" color="secondary">
+                    <h2>
+                        <ion-icon name="pencil-outline"></ion-icon>
+                    </h2>
+                </ion-item-option>
                 <ion-item-option (click)="delete(list, todo)" color="danger">
                     <h2>
                         <ion-icon name="trash-outline"></ion-icon>
@@ -47,7 +52,7 @@
     </ion-list>
 </ion-content>
 
-<ion-footer class="ion-no-padding">
+<ion-footer class="ion-no-padding ion-text-center">
     <ion-text style="opacity: 0.7" *ngIf="!canWrite()" color="primary">You don't have write access</ion-text>
     <ion-toolbar class="ion-no-padding">
         <ion-grid class="ion-no-padding">
