ajout boutons back ajout observableBis pour home changement icon share sur home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -30,7 +30,7 @@
                         </ion-label>
                         <ion-icon *ngIf="!isDisabled" slot="start" name="repeat-outline"></ion-icon>
                         <ion-icon *ngIf="isSharedWithMe(list)" name="people-outline" style="color: gray"></ion-icon>
-                        <ion-icon *ngIf="isSharedByMe(list)" name="share-social-outline" style="color: gray"></ion-icon>
+                        <ion-icon *ngIf="isSharedByMe(list)" name="people" style="color: gray"></ion-icon>
                     </ion-item>
                 </ion-reorder>
 
