--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+      <ion-buttons slot="start">
+          <ion-button backButton>
+              <ion-icon name="arrow-back-outline" size="large"></ion-icon>
+          </ion-button>
+      </ion-buttons>
       <ion-title>
         Reset password
       </ion-title>
